--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-  <style> body {padding: 0; margin: 0;} </style>
+  <style> body {padding: 0; margin: 0; justify-content: center;
+    align-items: center;} </style>
 </head>
 
 <body>
